# aigp-racer

./: .coderabbit.yaml  .gitignore  .pr_agent.toml  AGENTS.md  AIGP_RACER_LAB.md  DISCLOSURE_LEDGER.md  README.md  pyproject.toml
.codex/: HANDOFF.md  START_HERE.md
.github/: copilot-instructions.md  pull_request_template.md
docs/: ai-review-setup.md  issue-001-aigp-research-and-plan.md  review-guidelines.md
estimation/: __init__.py  state.py  sync.py
mavlink/: __init__.py  client.py  command_intent.py  official_protocol.py  telemetry.py
perception/: __init__.py  detector.py  geometry.py
scripts/: aigp_command_intent_gate.py  aigp_compiled_vision_gate.py  aigp_controller_safety_gate.py  aigp_fixture_gate.py  aigp_gate_measurement_boundary_gate.py  aigp_integrated_dry_run_gate.py  aigp_jpeg_decode_benchmark.py  aigp_local_gate.sh  aigp_minimal_loop_latency_gate.py  aigp_official_package_probe.py  aigp_official_packet_capture.py  aigp_packaging_probe.py  aigp_practice_adapter_gate.py  aigp_profile_gate.py  aigp_sim_access_probe.py  aigp_telemetry_probe.py  validate_review_configs.py
solver/: __init__.py  baseline.py  commands.py
tests/: test_compiled_vision_gate.py  test_controller_safety_gate.py  test_estimation.py  test_integrated_dry_run_gate.py  test_jpeg_decode_benchmark.py  test_mavlink_client.py  test_mavlink_command_intent.py  test_mavlink_telemetry.py  test_minimal_loop_latency_gate.py  test_official_package_probe.py  test_official_packet_capture.py  test_official_protocol.py  test_packaging_probe.py  test_perception_detector.py  test_profile_gate.py  (+7 more)
(+62 files in other folders)
