[project]
name = "aigp-racer"
version = "0.0.0"
description = "Autonomous drone-racing solver and offline evaluation lab for AI Grand Prix."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
dev = [
  "jsonschema>=4.25.0",
  "pytest>=8.4.0",
  "pyyaml>=6.0.2",
  "ruff>=0.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "RUF",
]

[tool.pytest.ini_options]
testpaths = [
  "tests",
]

